force-app/main/default/objects/ORTLLikelihood__mdt.object
<CustomObject>
    <fields>
        <fullName>Caption1__c</fullName>
        <label>Caption 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption2__c</fullName>
        <label>Caption 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption3__c</fullName>
        <label>Caption 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ORTL Likelihood Caption</label>
</CustomObject>